[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "after-hours-liquidity-monitor"
version = "0.1.0"
description = "程序化盘后流动性与尾部风险监控引擎 - 自动化的本地数据管道，在每日盘后自动抓取、清洗并计算关键的宏观流动性与期权衍生品指标"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.5.0",
    "gspread>=6.1.0",
    "google-auth>=2.32.0",
    "google-auth-oauthlib>=1.2.0",
    "loguru>=0.7.0",
    "rich>=13.7.0",
    "pyarrow>=16.0.0",
    "pyyaml>=6.0",
    "fredapi>=0.5.0",
    "apscheduler>=3.10.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "plotly>=5.22.0",
    "openpyxl>=3.1.0",
    "yfinance>=0.2.40",
    "pandas-market-calendars>=4.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "pre-commit>=3.7.0",
    "respx>=0.21.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
